--- a/GitTest.html
+++ b/GitTest.html
@@ -8,6 +8,6 @@
 	<title>Template les grilles fluides-partie-1</title>
 </head>
 <body>
-<h1>Git Test</h1>
+<h1>Git Test change</h1>
 </body>
 </html>
